src/parser/tests/snapshots/rusty__parser__tests__type_parser_tests__enum_with_equality_operator_instead_of_assignment_should_error.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: diagnostics
---
error[E123]: Enum element initialization must use ':=' (assignment), not '=' (equality comparison)
  ┌─ <internal>:2:34
  │
2 │         TYPE State : (Idle := 0, Running = 1);
  │                                  ^^^^^^^^^^^ Enum element initialization must use ':=' (assignment), not '=' (equality comparison)
